--- a/index.html
+++ b/index.html
@@ -3,27 +3,35 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-	<ul class="nav justify-content-end">
-	  <li class="nav-item">
-	    <a class="nav-link active" href="#">Active</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="#">Link</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="#">Link</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link disabled" href="#">Disabled</a>
-	  </li>
-	</ul>
+<!-- Navbar -->
 
-	<!-- Header -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  <a class="navbar-brand" href="#"><i class="fas fa-camera"></i></a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNav">
+	    <ul class="navbar-nav">
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Home</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">About</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">Contact</a>
+	      </li>
+	    </ul>
+	  </div>
+	</nav>
+
+<!-- Header -->
 
 	<div class="jumbotron text-center">
 		<div class="col-md-6 mx-auto">
@@ -35,7 +43,7 @@
 		</div>
 	</div>
 
-	<!-- Galería -->
+<!-- Galería -->
 
 	<div class="container">
 		<div class="card-deck text-center">
@@ -43,7 +51,7 @@
 			  <img class="card-img-top" src="./assets/images/1.jpg" alt="Card image cap">
 			  <div class="card-body">
 			    <h5 class="card-title">Card title</h5>
-			    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+			    <p class="card-text">Some quick example text.</p>
 			    <a href="#" class="btn btn-light btn-sm">button</a>
 			  </div>
 			</div>
@@ -51,21 +59,81 @@
 			  <img class="card-img-top" src="./assets/images/2.jpg" alt="Card image cap">
 			  <div class="card-body">
 			    <h5 class="card-title">Card title</h5>
-			    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			    <a href="#" class="btn btn-primary">Go somewhere</a>
+			    <p class="card-text">Some quick example text.</p>
+			    <a href="#" class="btn btn-light btn-sm">button</a>
 			  </div>
 			</div>
 			<div class="card">
 			  <img class="card-img-top" src="./assets/images/3.jpg" alt="Card image cap">
 			  <div class="card-body">
 			    <h5 class="card-title">Card title</h5>
-			    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-			    <a href="#" class="btn btn-primary">Go somewhere</a>
+			    <p class="card-text">Some quick example text.</p>
+			    <a href="#" class="btn btn-light btn-sm">button</a>
+			  </div>
+			</div>
+		</div>
+		<div class="card-deck text-center">
+			<div class="card">
+			  <img class="card-img-top" src="./assets/images/4.jpg" alt="Card image cap">
+			  <div class="card-body">
+			    <h5 class="card-title">Card title</h5>
+			    <p class="card-text">Some quick example text.</p>
+			    <a href="#" class="btn btn-light btn-sm">button</a>
+			  </div>
+			</div>
+			<div class="card">
+			  <img class="card-img-top" src="./assets/images/5.jpg" alt="Card image cap">
+			  <div class="card-body">
+			    <h5 class="card-title">Card title</h5>
+			    <p class="card-text">Some quick example text.</p>
+			    <a href="#" class="btn btn-light btn-sm">button</a>
+			  </div>
+			</div>
+			<div class="card">
+			  <img class="card-img-top" src="./assets/images/6.jpg" alt="Card image cap">
+			  <div class="card-body">
+			    <h5 class="card-title">Card title</h5>
+			    <p class="card-text">Some quick example text.</p>
+			    <a href="#" class="btn btn-light btn-sm">button</a>
+			  </div>
+			</div>
+		</div>
+		<div class="card-deck text-center">
+			<div class="card">
+			  <img class="card-img-top" src="./assets/images/7.jpg" alt="Card image cap">
+			  <div class="card-body">
+			    <h5 class="card-title">Card title</h5>
+			    <p class="card-text">Some quick example text.</p>
+			    <a href="#" class="btn btn-light btn-sm">button</a>
+			  </div>
+			</div>
+			<div class="card">
+			  <img class="card-img-top" src="./assets/images/8.jpg" alt="Card image cap">
+			  <div class="card-body">
+			    <h5 class="card-title">Card title</h5>
+			    <p class="card-text">Some quick example text.</p>
+			    <a href="#" class="btn btn-light btn-sm">button</a>
+			  </div>
+			</div>
+			<div class="card">
+			  <img class="card-img-top" src="./assets/images/9.jpg" alt="Card image cap">
+			  <div class="card-body">
+			    <h5 class="card-title">Card title</h5>
+			    <p class="card-text">Some quick example text.</p>
+			    <a href="#" class="btn btn-light btn-sm">button</a>
 			  </div>
 			</div>
 		</div>
 	</div>
 
+<!-- Footer -->
+
+	<footer class="text-center">
+		<div>
+			<i class="fas fa-camera"></i>
+		</div>
+		<div class="pageinfo"> Mi Álbum Fotográfico 2018</div>
+	</footer>
 
 
 <!-- Código Bootstrap -->
